<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatup_demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  
    <string name="btn_send_message">Send Message</string>
    
    <!-- Activity titles -->    
    <string name="activity_location_found">Location Found</string>
    
    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="friend_list">Friend list</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Contacts</string>
    
    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    

</resources>
