<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search Widget -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"
          android:actionViewClass="android.widget.SearchView"/>
    
    <!-- Show friend list -->
    <item android:id="@+id/friend_list"
          android:icon="@drawable/ic_action_chat"
          android:title="@string/friend_list"
          android:showAsAction="ifRoom" />
    
    
    
    <!-- Help-->
    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/action_help" 
          android:showAsAction="never"/> 
    
    <!-- Check updates -->
    <item android:id="@+id/add_contacts"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_check_updates"
          android:showAsAction="never" />
    <item android:id="@+id/setting"
        android:icon="@drawable/ic_action_settings"
        android:title="Settings"
        android:showAsAction="never"/>
</menu>
